# jump-in

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
configs/: commands.json  settings.json
src/: config.py  main.py  utils.py
tests/: test_config.py  test_main.py  test_utils.py
