[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jump-in"
version = "0.1.0"
description = "A utility to execute commands and steps from JSON configuration files."
readme = "README.md"
license = { file = "LICENSE" }
authors = [
    { name = "dsl", email = "jumpinpython@gmail.com" }
]
keywords = ["automation", "commands", "json", "subprocess"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]
dependencies = [
    "shlex"  # For safely parsing shell commands
]

[project.scripts]
jump-in = "main:main"